# PigeonHub

./: .env.example  .gitignore  .npmignore  Dockerfile  MEMORY_LEAK_FIX.md  PIGEONHUB_NODE.md  Procfile  README.md  app.json  bootstrap-node.js  fly.toml.example  heroku.yml  index.js  local-node.mjs  package-lock.json  package.json  pigeonhub-node-example.js  pigeonhub-node.js  server.js  server.js.new  simple-peer-test.js  test-answer-flow.mjs  test-bootstrap-mesh-connection.mjs  test-cross-node-detailed.mjs  test-cross-node-mesh-fixed.mjs  test-cross-node-mesh.mjs  test-cross-signaling.mjs  test-local-signaling.html  test-local.mjs  test-mesh-discovery.mjs  test-real-cross-node.mjs  test-signal-delivery.mjs
cli/: pp-sig.mjs
config/: bootstrap-config.js
deploy/: Dockerfile  cloudflare-worker-configured.js  cloudflare-worker.js  deploy-all.sh  fly.toml  generate-keys.mjs  heroku-package.json  heroku-server.js  package 2.json  server.js  wrangler.toml
embedded/esp32/: CMakeLists.txt  GETTING_STARTED.md  Makefile  README.md  esp32_bridge.c  esp32_bridge.h  pigeonhub_client.c  pigeonhub_client.wasm
embedded/esp32/esp32-sketch/: .gitignore  README.md  embed_wasm.py  esp32-sketch.ino  platformio.ini
embedded/esp32/esp32-sketch/src/: main.cpp  wasm_data.h
embedded/esp32/scripts/: INDEX.md  QUICK_START.md  README.md  flash.ps1  flash.sh  rebuild.ps1  rebuild.sh  setup-linux.sh  setup-macos.sh  setup-windows.ps1  verify-setup.ps1  verify-setup.sh
examples/: browser.html  node-find.mjs  node-publish.mjs
kademlia/: BootstrapRegistry.js  KademliaDHT-methods.js  (+2 more)
(+17 files in other folders)
